--- a/assets/admin/css/admin.csi.view.css
+++ b/assets/admin/css/admin.csi.view.css
@@ -3,14 +3,15 @@ select[name="nfFormTable_length"] {
 }
 
 #table-wrap {
-    margin-top: 50px;
+    margin-top: 3vh;
     width: 80%;
 }
 
 #submit-wrap {
+    box-sizing: border-box;
     display: flex;
     justify-content: flex-end;
-    margin-top: 20px;
+    margin-top: 1vh;
 }
 
 .paginate_button {
@@ -19,4 +20,20 @@ select[name="nfFormTable_length"] {
     border-color: #2271b1 !important;
     background: #f6f7f7 !important;
     border-radius: 3px !important;
+}
+
+#csi-success-message {
+    display: block;
+    box-sizing: border-box;
+    position: relative;
+    color: #004085 !important;
+    background-color: #cce5ff !important;
+    border-color: #b8daff !important;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    padding: .75rem 1.25rem;
+    margin-top: 1rem;
+    height: 5vh;
+    width: 75vw;
+    text-align: center;
 }
