Bug fixes + deny button

--- a/assets/admin/css/admin.csi.view.css
+++ b/assets/admin/css/admin.csi.view.css
@@ -30,3 +30,7 @@ select[name="nfFormTable_length"] {
     text-align: left;
     padding: 0.5rem;
 }
+
+.submit-button {
+    margin: 0.1vw !important;
+}
