--- a/assets/public/css/public.csi.view.css
+++ b/assets/public/css/public.csi.view.css
@@ -40,7 +40,7 @@
 #csi-content {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(5, 30vh);
+    grid-template-rows: repeat(5, 1fr);
 }
 
 .csi-element-container {
@@ -55,4 +55,17 @@
     position: relative !important;
     left: 0 !important;
     top: 0 !important;
+}
+
+#csi-previous-page, #csi-next-page {
+    margin: 10px;
+    border-radius: 5px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+input[type='checkbox'] {
+  margin-right: 10px;
 }
