--- a/public/css/wtr-csi-public.css
+++ b/public/css/wtr-csi-public.css
@@ -353,7 +353,12 @@
     height: 60px;
     -webkit-animation: spin 0.5s linear infinite;
     animation: spin 0.5s linear infinite;
-    margin: auto;
+}
+
+.wtr-csi-public-loader {
+    position: absolute;
+    left: 50vw;
+    top: 50vh;
 }
 
 @keyframes spin {
